--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,37 +64,19 @@
 		 					<li><a href = "https://github.com/Lemonjing/your-offer" target="_blank">剑指offer的Scala实现</a></li>
 	 					</ul>
 	 			</div>
-	 			
-	 			<div class="recentuse">
-	 					<p>经常出没</p>
-	 					<hr>
-	 					<ul>
-	 						<li><a href = "http://music.163.com/#/user/home?id=63589002" target="_blank">网易云音乐</a></li>
-	 						<li><a href = "https://github.com/Lemonjing" target="_blank">GitHub</a></li>
-	 						<li><a href = "http://weibo.com/u/1662536394" target="_blank">微博</a></li>
-	 						<li><a href = "http://pianke.me/pages/user/user.html?uid=1924980" target="_blank">片刻</a></li>
-		 					<li><a href = "https://www.zhihu.com/people/xmusaber" target="_blank">知乎</a></li>
-		 					<li><a href = "http://www.nowcoder.com/profile/213475" target="_blank">牛客</a></li>
-	 					</ul>
-	 			</div>
+
+				<div class="recentuse">
+					<p>经常出没</p>
+					<hr>
+					<ul>
+						<li><a href = "https://github.com/zanghongtu2006" target="_blank">GitHub</a></li>
+					</ul>
+				</div>
 				
 				<div class="friendlink">
 	 					<p>友情链接</p>
 	 					<hr>					
-		 				<a href = "https://imjad.cn/" target="_blank">AD's Blog</a></br>
-						<a href = "http://zyl.me" target="_blank">ZYL的博客</a></br>
-						<a href = "http://mxwu.cn" target="_blank">梦忻屋</a></br>
-						<a href = "http://www.weiyanweiyu.cn" target="_blank">微言微语</a></br>
-						<a href = "http://jloong.com" target="_blank">楚书业</a></br>
-						<a href = "https://emiria.io/" target="_blank">蔓舞寻樱</a></br>
-						<a href = "http://www.xiaokang.info" target="_blank">小康博客</a><br>
-						<a href = "http://blog.iov.me" target="_blank">随心说</a></br>
-						<a href = "http://czduban.com" target="_blank">以歌。先生</a><br>
-						<a href = "http://5mx.net/" target="_blank">冷夜博客</a><br>
-						<a href = "http://www.8hao.com.cn/" target="_blank">艳莜日记</a><br>
-						<a href = "http://blog.sunxyz.cn/" target="_blank">诸葛扬阳</a><br>
-						<a href = "https://lostyou.love/" target="_blank">邻居</a><br>
-						<a href = "http://www.kurodown.com/" target="_blank">酷绒站</a>
+		 				<a href = "http://www.zanghongtu.com/" target="_blank">原"零度空间"</a></br>
 	 			</div>
 				
 			</div>
