--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 					<hr>
 					<div class="page-tag">
 							{% for category in site.categories %}
-								<a href="http://lemonjing.github.io/pages/class.html#{{category[0]}}" name="{{category[0]}}" class="pjaxlink">{{category[0] }}({{category[1].size}})</a>
+								<a href="https://zanghongtu2006.github.io/pages/class.html#{{category[0]}}" name="{{category[0]}}" class="pjaxlink">{{category[0] }}({{category[1].size}})</a>
 							{% endfor %}
 					</div>					
 				</div>
@@ -45,7 +45,7 @@
 					<div class="page-tag">
 							{% for tag in site.tags %}
 								{% if tag[1].size > 2 %}
-								<a href="http://lemonjing.github.io/pages/tags.html#{{tag[0]}}" name="{{tag[0]}}" class="pjaxlink"><i class="fa fa-tags"></i>{{ tag[0] }}({{tag[1].size}})</a>
+								<a href="https://zanghongtu2006.github.io/pages/tags.html#{{tag[0]}}" name="{{tag[0]}}" class="pjaxlink"><i class="fa fa-tags"></i>{{ tag[0] }}({{tag[1].size}})</a>
 								{% endif %}
 							{% endfor %}
 					</div>					
