修改部分内容, 删除原作者内容

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,13 @@
 <footer class="site-footer">
   <div class="wrapper">
 
-    <h2 class="footer-heading">saber's blog</h2>
-
+    <h2 class="footer-heading">零度空间</h2>
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
           <li>{{ site.title }}</li>
           <li><a href="mailto:{{ site.author.email }}">{{ site.author.email }}</a></li>
-          <li>闽ICP备15018990号</li>
+          <li>京ICP备14031896号</li>
         </ul>
       </div>
 
