--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,7 @@
                         <span class="icon-bar"></span>
                     </button>
                     <div class="sitehome">
-                        <a href="{{ site.baseurl }}/" title="首页"><i class="fa fa-home fa-2x homeicon"></i><a><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+                        <a href="{{ site.baseurl }}/" title="首页"><i class="fa fa-home fa-2x homeicon"></i></a><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
                     </div>
                 </div>
                 <div class="col-md-6 col-lg-6 hidden-xs hidden-sm center">
