--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,4 +1,4 @@
-<head>
+<head><div style="width:100%;font-size:20px;text-align:center;background-color:#D9B300;color:#000000;">此站点是原站翻译版,如需原文请跳转至<a href="https://www.keycloak.org/">KeyCloak 官网</a>查阅</div>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0,minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
